[gd_scene load_steps=71 format=3 uid="uid://c0vnqt6uyxaoa"]

[ext_resource type="Script" path="res://player/Player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cevoga5bi8id" path="res://player/ControllableCamera.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://xl8avaorvjim" path="res://assets/models/CombatClimbingPack.glb" id="2_ru4k0"]
[ext_resource type="PackedScene" uid="uid://e2bccij4j7ud" path="res://player/Controls.tscn" id="3"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="4"]
[ext_resource type="Script" path="res://player/states/Stopped.gd" id="5"]
[ext_resource type="Script" path="res://player/states/Running.gd" id="6"]
[ext_resource type="Script" path="res://player/states/Jumping.gd" id="7"]
[ext_resource type="Script" path="res://player/states/Dashing.gd" id="8"]
[ext_resource type="Script" path="res://player/states/OnGround.gd" id="9"]
[ext_resource type="Script" path="res://player/states/InAir.gd" id="10"]
[ext_resource type="Script" path="res://player/states/Falling.gd" id="11"]
[ext_resource type="Script" path="res://player/states/Crouching.gd" id="12"]
[ext_resource type="Script" path="res://player/states/Swimming.gd" id="14"]
[ext_resource type="Script" path="res://player/states/OnSurface.gd" id="15"]
[ext_resource type="Script" path="res://player/states/Underwater.gd" id="16"]
[ext_resource type="Script" path="res://player/states/Diving.gd" id="17"]
[ext_resource type="Script" path="res://player/states/Surging.gd" id="18"]
[ext_resource type="Script" path="res://player/states/WallClimb.gd" id="19_tqj6u"]
[ext_resource type="Script" path="res://player/states/Climbing.gd" id="19_w5dc4"]
[ext_resource type="Script" path="res://player/ClimbToTop.gd" id="20_vptea"]
[ext_resource type="Script" path="res://player/states/WallRun.gd" id="22_3jwft"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42fik"]
animation = &"unarmed-jump-up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_chc45"]
animation = &"unarmed-dash"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7o23t"]
animation = &"BracedIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nvibk"]
animation = &"ClimbRight"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4isjx"]
animation = &"ClimbDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ni852"]
animation = &"ClimbRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sifoj"]
animation = &"ClimbDown"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hl5tb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7o23t")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_nvibk")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_4isjx")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ni852")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_sifoj")
blend_point_4/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="14"]
animation = &"unarmed-crouch-idle"

[sub_resource type="AnimationNodeAnimation" id="15"]
animation = &"unarmed-crouch-run"

[sub_resource type="AnimationNodeBlendSpace1D" id="30"]
blend_point_0/node = SubResource("14")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("15")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_xnsw3"]
fadein_time = 0.1
fadeout_time = 0.1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r7aer"]
animation = &"unarmed-jump-down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xv5f5"]
animation = &"unarmed-jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rout0"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_broob"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_njbj0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d0nsn"]
states/unarmed-jump/node = SubResource("AnimationNodeAnimation_xv5f5")
states/unarmed-jump/position = Vector2(532, -4)
states/unarmed-jump-down/node = SubResource("AnimationNodeAnimation_r7aer")
states/unarmed-jump-down/position = Vector2(705, 101)
transitions = ["unarmed-jump", "unarmed-jump-down", SubResource("AnimationNodeStateMachineTransition_rout0"), "unarmed-jump-down", "End", SubResource("AnimationNodeStateMachineTransition_broob"), "Start", "unarmed-jump", SubResource("AnimationNodeStateMachineTransition_njbj0")]
graph_offset = Vector2(-77, -129)

[sub_resource type="AnimationNodeAnimation" id="32"]
animation = &"unarmed-idle"

[sub_resource type="AnimationNodeAnimation" id="33"]
animation = &"unarmed-run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r03nb"]
animation = &"unarmed-run"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_wa8wm"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_f7gwa"]
graph_offset = Vector2(-239.145, 154.495)
nodes/Animation/node = SubResource("AnimationNodeAnimation_r03nb")
nodes/Animation/position = Vector2(0, 133.333)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_wa8wm")
nodes/TimeScale/position = Vector2(160, 133.333)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"Animation"]

[sub_resource type="AnimationNodeBlendSpace1D" id="34"]
blend_point_0/node = SubResource("32")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("33")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeBlendTree_f7gwa")
blend_point_2/pos = 1.4
max_space = 2.0

[sub_resource type="AnimationNodeTransition" id="35"]
xfade_time = 0.2
input_0/name = "on-ground"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "in-air"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "crouching"
input_2/auto_advance = false
input_2/reset = true
input_3/name = "swimming"
input_3/auto_advance = false
input_3/reset = true
input_4/name = "surging"
input_4/auto_advance = false
input_4/reset = true
input_5/name = "climbing"
input_5/auto_advance = false
input_5/reset = true

[sub_resource type="AnimationNodeAnimation" id="48"]
animation = &"unarmed-surge-charge"

[sub_resource type="AnimationNodeAnimation" id="49"]
animation = &"unarmed-surge-release"

[sub_resource type="AnimationNodeBlendSpace1D" id="47"]
blend_point_0/node = SubResource("48")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("49")
blend_point_1/pos = 0.3

[sub_resource type="AnimationNodeAnimation" id="45"]
animation = &"unarmed-swim-idle"

[sub_resource type="AnimationNodeAnimation" id="46"]
animation = &"unarmed-swim"

[sub_resource type="AnimationNodeBlendSpace1D" id="44"]
blend_point_0/node = SubResource("45")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("46")
blend_point_1/pos = 1.0

[sub_resource type="AnimationNodeBlendTree" id="36"]
graph_offset = Vector2(-634.111, -44.5241)
nodes/Animation/node = SubResource("AnimationNodeAnimation_chc45")
nodes/Animation/position = Vector2(-60, 500)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_42fik")
"nodes/Animation 2/position" = Vector2(-800, 200)
nodes/Climbing/node = SubResource("AnimationNodeBlendSpace2D_hl5tb")
nodes/Climbing/position = Vector2(-560, 320)
nodes/Crouching/node = SubResource("30")
nodes/Crouching/position = Vector2(-360, 260)
nodes/Jump/node = SubResource("AnimationNodeOneShot_xnsw3")
nodes/Jump/position = Vector2(-560, 80)
nodes/Jumping/node = SubResource("AnimationNodeStateMachine_d0nsn")
nodes/Jumping/position = Vector2(-740, 60)
nodes/OnGround/node = SubResource("34")
nodes/OnGround/position = Vector2(-360, -20)
nodes/RootState/node = SubResource("35")
nodes/RootState/position = Vector2(-26.6667, 133.333)
nodes/Surging/node = SubResource("47")
nodes/Surging/position = Vector2(-360, 540)
nodes/Swimming/node = SubResource("44")
nodes/Swimming/position = Vector2(-360, 400)
nodes/output/position = Vector2(400, 160)
node_connections = [&"output", 0, &"RootState", &"Jump", 0, &"Jumping", &"Jump", 1, &"Animation 2", &"RootState", 0, &"OnGround", &"RootState", 1, &"Jump", &"RootState", 2, &"Crouching", &"RootState", 3, &"Swimming", &"RootState", 4, &"Surging", &"RootState", 5, &"Climbing"]

[sub_resource type="StandardMaterial3D" id="16"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="Gradient" id="19"]
offsets = PackedFloat32Array(0.038, 0.483, 0.908)
colors = PackedColorArray(1, 0.654902, 0, 1, 1, 0.945098, 0.152941, 1, 1, 0.988235, 0.827451, 0)

[sub_resource type="GradientTexture2D" id="20"]
gradient = SubResource("19")

[sub_resource type="ParticleProcessMaterial" id="17"]
emission_shape = 3
emission_box_extents = Vector3(0.281, 0.524, 0)
direction = Vector3(0, 0, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("20")

[sub_resource type="BoxMesh" id="18"]
size = Vector3(0.04, 0.04, 2)

[sub_resource type="Gradient" id="23"]
offsets = PackedFloat32Array(0, 0.365079, 0.555556, 0.767196)
colors = PackedColorArray(0, 0.294118, 1, 1, 0.0235294, 0.505882, 0.992157, 1, 0.498039, 1, 0.941176, 1, 0.498039, 1, 0.941176, 0)

[sub_resource type="GradientTexture2D" id="24"]
gradient = SubResource("23")

[sub_resource type="Curve" id="25"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.34434, 1), 0.0, 0.0, 0, 0, Vector2(0.834906, 0), -4.81818, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="26"]
curve = SubResource("25")

[sub_resource type="ParticleProcessMaterial" id="27"]
direction = Vector3(0, 0, 1)
spread = 15.0
flatness = 0.38
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 3.0
scale_curve = SubResource("26")
color = Color(1, 1, 1, 0.537255)
color_ramp = SubResource("24")

[sub_resource type="StandardMaterial3D" id="28"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="29"]
material = SubResource("28")
radius = 0.1
height = 0.2

[sub_resource type="CapsuleShape3D" id="37"]
radius = 0.3
height = 1.8

[sub_resource type="SphereShape3D" id="21"]

[sub_resource type="CylinderShape3D" id="22"]
height = 1.0
radius = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_joxdp"]
height = 1.0
radius = 0.45

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1")

[node name="Skin" type="Node3D" parent="."]

[node name="CombatClimbingPack" parent="Skin" instance=ExtResource("2_ru4k0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.196, 0)

[node name="Armature" parent="Skin/CombatClimbingPack" index="0"]
transform = Transform3D(-0.01, 8.74228e-10, -3.82137e-17, 0, -4.37114e-10, -0.01, -8.74228e-10, -0.01, 4.37114e-10, 0, -1.19645, 0)

[node name="Skeleton3D" parent="Skin/CombatClimbingPack/Armature" index="0"]
bones/0/position = Vector3(0.391795, -0.298042, -99.0074)
bones/0/rotation = Quaternion(-0.729763, -0.053096, 0.0137893, 0.681496)
bones/1/rotation = Quaternion(-0.0309116, 0.0117132, 0.0233456, 0.999181)
bones/2/rotation = Quaternion(0.0105405, 0.00128167, 0.0140618, 0.999845)
bones/3/rotation = Quaternion(0.0678072, 0.00229134, 0.0140158, 0.997597)
bones/4/rotation = Quaternion(0.0519393, -0.00121877, 0.00439383, 0.99864)
bones/5/rotation = Quaternion(-0.0666681, 0.0115029, -0.00135864, 0.997708)
bones/7/position = Vector3(6.10582, 9.10627, 0.757055)
bones/7/rotation = Quaternion(-0.597489, -0.43527, 0.507299, -0.442939)
bones/8/position = Vector3(-3.21337e-05, 12.9225, -3.0981e-05)
bones/8/rotation = Quaternion(0.545096, 0.183417, 0.203533, 0.79234)
bones/9/position = Vector3(1.55105e-05, 27.405, 4.30138e-05)
bones/9/rotation = Quaternion(6.14364e-08, -5.10863e-08, 0.0131453, 0.999914)
bones/10/rotation = Quaternion(0.0489344, -0.285049, 0.0272789, 0.956874)
bones/11/rotation = Quaternion(0.209861, -0.0595624, 0.207505, 0.9536)
bones/12/position = Vector3(3.5882e-05, 4.74496, 9.72446e-06)
bones/12/rotation = Quaternion(-0.142705, 0.0865977, -0.240534, 0.95618)
bones/13/position = Vector3(-1.2815e-05, 4.38214, -4.92872e-05)
bones/13/rotation = Quaternion(-0.121023, -0.075541, 0.0240543, 0.989479)
bones/14/position = Vector3(-2.83798e-05, 3.45899, -7.53565e-06)
bones/15/position = Vector3(-2.82204, 12.2667, 0.231862)
bones/15/rotation = Quaternion(0.0662168, 0.000733652, 0.00843566, 0.997769)
bones/16/position = Vector3(6.30627e-07, 3.89198, 1.39769e-05)
bones/16/rotation = Quaternion(0.150998, -9.2952e-07, -0.01548, 0.988413)
bones/17/position = Vector3(-5.17335e-07, 3.41519, 1.51097e-05)
bones/17/rotation = Quaternion(0.0700819, -1.15976e-07, -0.00718171, 0.997515)
bones/18/position = Vector3(-2.14935e-06, 3.07795, 1.31669e-05)
bones/19/rotation = Quaternion(0.136531, -0.00383597, -0.0229524, 0.990362)
bones/20/position = Vector3(3.50479e-07, 3.61399, 1.24656e-05)
bones/20/rotation = Quaternion(0.151255, -1.13662e-07, -0.0155002, 0.988373)
bones/21/rotation = Quaternion(0.159933, -1.1736e-07, -0.0163893, 0.986992)
bones/22/position = Vector3(-3.16789e-05, 3.68017, 1.57563e-06)
bones/23/position = Vector3(2.21664, 12.147, -0.00996022)
bones/23/rotation = Quaternion(0.183251, -0.00465206, -0.0314506, 0.982552)
bones/24/rotation = Quaternion(0.181388, -1.52499e-06, -0.0185961, 0.983236)
bones/25/position = Vector3(1.16869e-06, 3.30732, -1.24129e-05)
bones/25/rotation = Quaternion(0.155213, -1.41195e-07, -0.0159057, 0.987753)
bones/27/position = Vector3(4.72584, 10.9083, 0.226161)
bones/27/rotation = Quaternion(0.233868, -0.00347256, -0.0488722, 0.971033)
bones/28/position = Vector3(-7.20446e-07, 4.13658, 1.65056e-05)
bones/28/rotation = Quaternion(0.151258, -5.61246e-05, -0.0158642, 0.988367)
bones/29/position = Vector3(-9.06638e-07, 2.59484, -1.64147e-05)
bones/29/rotation = Quaternion(0.143505, 3.33803e-05, -0.0144773, 0.989544)
bones/31/position = Vector3(-6.1057, 9.10625, 0.757071)
bones/31/rotation = Quaternion(0.600298, -0.434401, 0.523506, 0.420571)
bones/32/position = Vector3(3.26499e-05, 12.9224, -0.000280905)
bones/32/rotation = Quaternion(0.464597, -0.262443, -0.232956, 0.813022)
bones/33/position = Vector3(6.45968e-05, 27.4046, -0.000140586)
bones/33/rotation = Quaternion(-5.60168e-08, -2.20788e-08, -0.0578636, 0.998325)
bones/34/rotation = Quaternion(0.0566413, 0.175015, -0.00525028, 0.982921)
bones/35/rotation = Quaternion(0.213783, 0.0653711, -0.225647, 0.948212)
bones/36/position = Vector3(-7.03347e-06, 4.74495, -1.79333e-05)
bones/36/rotation = Quaternion(-0.144093, -0.0761739, 0.277207, 0.946885)
bones/37/rotation = Quaternion(-0.1552, 0.0746795, -0.0260449, 0.984712)
bones/38/position = Vector3(2.46574e-05, 3.45902, -2.10639e-05)
bones/39/rotation = Quaternion(0.059513, -0.000991549, -0.0109805, 0.998167)
bones/40/rotation = Quaternion(0.151288, 7.93072e-07, 0.0123284, 0.988413)
bones/41/position = Vector3(-1.12546e-05, 3.41515, -1.64944e-05)
bones/41/rotation = Quaternion(0.0702164, -3.26775e-08, 0.00571995, 0.997515)
bones/42/position = Vector3(1.21628e-06, 3.07802, -9.63694e-06)
bones/43/position = Vector3(2.05101e-05, 12.7755, -6.15094e-05)
bones/43/rotation = Quaternion(0.130515, 0.00368978, 0.0189217, 0.991259)
bones/44/rotation = Quaternion(0.151545, 2.40045e-07, 0.0123452, 0.988373)
bones/45/position = Vector3(-3.08342e-05, 3.45971, -9.35995e-06)
bones/45/rotation = Quaternion(0.16024, 6.28672e-08, 0.0130536, 0.986992)
bones/46/position = Vector3(2.6858e-05, 3.6802, -1.40586e-06)
bones/47/rotation = Quaternion(0.177452, 0.0045006, 0.0264541, 0.983764)
bones/48/rotation = Quaternion(0.181736, 1.62114e-06, 0.0148126, 0.983236)
bones/49/position = Vector3(-2.58022e-07, 3.30733, -5.99966e-06)
bones/49/rotation = Quaternion(0.15551, 5.72204e-07, 0.0126682, 0.987753)
bones/50/position = Vector3(1.95057e-05, 3.66009, -1.61643e-05)
bones/51/rotation = Quaternion(0.228493, 0.003402, 0.0429778, 0.97259)
bones/52/position = Vector3(2.93929e-06, 4.13666, -7.10754e-06)
bones/52/rotation = Quaternion(0.151548, 2.14981e-06, 0.0123558, 0.988373)
bones/53/position = Vector3(3.45353e-06, 2.59485, -6.50066e-06)
bones/53/rotation = Quaternion(0.143773, -1.85886e-06, 0.0117017, 0.989542)
bones/55/rotation = Quaternion(0.135289, 0.0747017, 0.985032, -0.0763518)
bones/56/rotation = Quaternion(-0.129216, -0.0163863, 0.032302, 0.990955)
bones/57/rotation = Quaternion(0.532622, -0.0214295, -0.0272529, 0.845643)
bones/58/rotation = Quaternion(0.269344, -0.0323758, -0.0145918, 0.962389)
bones/60/rotation = Quaternion(-0.0910519, -0.0163025, 0.995394, -0.0252105)
bones/61/rotation = Quaternion(-0.0763208, 0.0839459, -0.0248994, 0.993231)
bones/62/rotation = Quaternion(0.565576, 0.01049, -0.00737944, 0.824597)
bones/63/rotation = Quaternion(0.288944, 0.0318911, 0.0140827, 0.956711)

[node name="AnimationTree" type="AnimationTree" parent="Skin"]
tree_root = SubResource("36")
anim_player = NodePath("../CombatClimbingPack/AnimationPlayer")
active = true
parameters/Climbing/blend_position = Vector2(-0.00253165, 0.994186)
parameters/Crouching/blend_position = 0.0
parameters/Jump/active = false
parameters/Jump/internal_active = false
parameters/Jump/request = 0
parameters/OnGround/blend_position = -0.0117647
parameters/OnGround/2/TimeScale/scale = 1.2
parameters/RootState/current_state = "on-ground"
parameters/RootState/transition_request = ""
parameters/RootState/current_index = 0
parameters/Surging/blend_position = 0.0
parameters/Swimming/blend_position = 0.0

[node name="VfxDash" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.984, 1.12412)
material_override = SubResource("16")
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.34
visibility_aabb = AABB(-1.39, -2.508, -3.479, 2.781, 5.015, 6.958)
local_coords = true
process_material = SubResource("17")
draw_pass_1 = SubResource("18")

[node name="VfxSurge" type="GPUParticles3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01641, 0)
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
randomness = 1.0
visibility_aabb = AABB(-2, -1.21914, -3, 4, 2.43828, 6)
process_material = SubResource("27")
draw_pass_1 = SubResource("29")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, -4.37114e-09)
shape = SubResource("37")

[node name="CamRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, 0)

[node name="ControllableCamera" parent="CamRoot" instance=ExtResource("2")]

[node name="Controls" parent="." instance=ExtResource("3")]

[node name="Movement" type="Node" parent="."]
script = ExtResource("4")
initial_state = NodePath("OnGround")

[node name="Crouching" type="Node" parent="Movement"]
script = ExtResource("12")

[node name="Stopped" type="Node" parent="Movement/Crouching"]
script = ExtResource("5")

[node name="Moving" type="Node" parent="Movement/Crouching"]
script = ExtResource("6")
move_speed = 4.0
sprint_speed = 4.0
turn_speed = 8.0
acceleration = 30.0
cam_follow_speed = 4.0

[node name="OnGround" type="Node" parent="Movement"]
script = ExtResource("9")

[node name="Stopped" type="Node" parent="Movement/OnGround"]
script = ExtResource("5")

[node name="Running" type="Node" parent="Movement/OnGround"]
script = ExtResource("6")

[node name="Dashing" type="Node" parent="Movement/OnGround"]
script = ExtResource("8")

[node name="InAir" type="Node" parent="Movement"]
script = ExtResource("10")

[node name="Falling" type="Node" parent="Movement/InAir"]
script = ExtResource("11")

[node name="Jumping" type="Node" parent="Movement/InAir"]
script = ExtResource("7")

[node name="Dashing" type="Node" parent="Movement/InAir"]
script = ExtResource("8")
dash_power = 180.0

[node name="Swimming" type="Node" parent="Movement"]
script = ExtResource("14")

[node name="Diving" type="Node" parent="Movement/Swimming"]
script = ExtResource("17")

[node name="OnSurface" type="Node" parent="Movement/Swimming"]
script = ExtResource("15")

[node name="Underwater" type="Node" parent="Movement/Swimming"]
script = ExtResource("16")

[node name="Surging" type="Node" parent="Movement/Swimming"]
script = ExtResource("18")

[node name="Climbing" type="Node" parent="Movement"]
script = ExtResource("19_w5dc4")
anim_transition_speed = 10.0

[node name="Stopped" type="Node" parent="Movement/Climbing"]
script = ExtResource("5")

[node name="WallClimb" type="Node" parent="Movement/Climbing"]
script = ExtResource("19_tqj6u")
move_speed = 2.5

[node name="ClimbToTop" type="Node" parent="Movement/Climbing"]
script = ExtResource("20_vptea")

[node name="WallRun" type="Node" parent="Movement/Climbing"]
script = ExtResource("22_3jwft")

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="SurgeTimer" type="Timer" parent="."]
one_shot = true

[node name="DeepWaterDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeepWaterDetector"]
shape = SubResource("21")

[node name="WaterSurfaceDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15803, 0)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterSurfaceDetector"]
shape = SubResource("22")

[node name="WallDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15803, 0)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallDetector"]
shape = SubResource("CylinderShape3D_joxdp")

[connection signal="area_entered" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_entered"]
[connection signal="area_exited" from="DeepWaterDetector" to="." method="_on_DeepWaterDetector_area_exited"]
[connection signal="area_entered" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_entered"]
[connection signal="area_exited" from="WaterSurfaceDetector" to="." method="_on_WaterSurfaceDetector_area_exited"]
[connection signal="area_entered" from="WallDetector" to="." method="_on_wall_detector_area_entered"]
[connection signal="area_exited" from="WallDetector" to="." method="_on_wall_detector_area_exited"]

[editable path="Skin/CombatClimbingPack"]
